--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
       <div class="row row-cols-1 row-cols-md-3 g-4"style="margin-left: 130px; margin-top: 20px; width:80%" >
         <div class="col">
             <div class="card">
-                <img src="/avengers.jpg" class="card-img-top" alt="...">
+                <img src="avengers.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                     <h5 class="card-title">Avengers: Endgame</h5>
                     <div class="accordion" id="accordionExample">
