--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
         </div>
         <div class="col">
             <div class="card">
-                <img src="/shawshank.jpg" class="card-img-top" alt="...">
+                <img src="shawshank.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                     <h5 class="card-title">The Shawshank Redemption</h5>
                     <div class="accordion" id="accordionExample">
@@ -113,7 +113,7 @@
     </div>
          <div class="col">
             <div class="card">
-                <img src="/joker.jpg" class="card-img-top" alt="...">
+                <img src="joker.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                     <h5 class="card-title">Joker </h5>
                     <div class="accordion" id="accordionExample">
