--- a/index.html
+++ b/index.html
@@ -36,9 +36,17 @@
             </div>
             <div class="carousel-item">
               <img src="header2.jpg" class="d-block w-100" alt="Slide 2">
+                 <div class="carousel-caption d-none d-md-block">
+                <h3>Mortal Engines 2018</h3>
+                    <p>An American-New Zealand co-production, the file is set in a post-apocalyptic world where entire cities have been mounted on wheels and motorised.</p>
+              </div>
             </div>
             <div class="carousel-item">
               <img src="header3.jpeg" class="d-block w-100" alt="Slide 3">
+                 <div class="carousel-caption d-none d-md-block">
+                <h3>Mortal Engines 2018</h3>
+                    <p>An American-New Zealand co-production, the file is set in a post-apocalyptic world where entire cities have been mounted on wheels and motorised.</p>
+              </div>
             </div>
           </div>
         </div>
