--- a/index.html
+++ b/index.html
@@ -24,41 +24,40 @@
           </div>
         </div>
       </nav>
-      <div id="myCarousel" class="carousel slide"  data-bs-ride="carousel" >
-        <div class="carousel-container">
-          <div class="carousel-inner w-100" style="height: 500px;">
-            <div class="carousel-item active">
-              <img src="header1.jpg" class="d-block w-100" alt="Slide 1">
-              <div class="carousel-caption d-none d-md-block">
-                <h3>Mortal Engines 2018</h3>
-                    <p>An American-New Zealand co-production, the file is set in a post-apocalyptic world where entire cities have been mounted on wheels and motorised.</p>
-              </div>
-            </div>
-            <div class="carousel-item">
-              <img src="header2.jpg" class="d-block w-100" alt="Slide 2">
-                 <div class="carousel-caption d-none d-md-block">
-                <h3>Mortal Engines 2018</h3>
-                    <p>An American-New Zealand co-production, the file is set in a post-apocalyptic world where entire cities have been mounted on wheels and motorised.</p>
-              </div>
-            </div>
-            <div class="carousel-item">
-              <img src="header3.jpeg" class="d-block w-100" alt="Slide 3">
-                 <div class="carousel-caption d-none d-md-block">
-                <h3>Mortal Engines 2018</h3>
-                    <p>An American-New Zealand co-production, the file is set in a post-apocalyptic world where entire cities have been mounted on wheels and motorised.</p>
-              </div>
-            </div>
+      <div id="carouselExample" class="carousel slide">
+        <div class="carousel-inner">
+          <div class="carousel-item">
+            <img src="header1.jpg" class="d-block w-100" alt="...">
           </div>
+          <div class="carousel-caption d-none d-md-block">
+                <h3>Mortal Engines 2018</h3>
+                    <p>An American-New Zealand co-production, the file is set in a post-apocalyptic world where entire cities have been mounted on wheels and motorised.</p>
+              </div>
+          <div class="carousel-item">
+            <img src="header2.jpg" class="d-block w-100" alt="...">
+            <div class="carousel-caption d-none d-md-block">
+                <h3>Mortal Engines 2018</h3>
+                    <p>An American-New Zealand co-production, the file is set in a post-apocalyptic world where entire cities have been mounted on wheels and motorised.</p>
+              </div>
+          </div>
+          <div class="carousel-item active">
+            <img src="header3.jpeg" class="d-block w-100" alt="...">
+          </div>
+          <div class="carousel-caption d-none d-md-block">
+                <h3>Mortal Engines 2018</h3>
+                    <p>An American-New Zealand co-production, the file is set in a post-apocalyptic world where entire cities have been mounted on wheels and motorised.</p>
+              </div>
         </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#myCarousel" data-bs-slide="prev">
-          <span class="carousel-control-prev-icon"  aria-hidden="true"></span>
-          <span class="visually-hidden" >Previous</span>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
         </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#myCarousel" data-bs-slide="next">
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
           <span class="carousel-control-next-icon" aria-hidden="true"></span>
           <span class="visually-hidden">Next</span>
         </button>
       </div>
+   
 
       <ul class="nav bg-secondary-subtle"style="margin: 0 auto; width:80%">
         <li class="nav-item">
@@ -73,7 +72,7 @@
        
       </ul>
 
-      <div class="row row-cols-1 row-cols-md-3 g-4"style="margin-left: 130px; margin-top: 20px; width:80%" >
+      <div class="row row-cols-1 row-cols-md-3 g-4"style="margin:0 auto; margin-top: 20px; width:80%" >
         <div class="col">
             <div class="card">
                 <img src="avengers.jpg" class="card-img-top" alt="...">
